--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.9.1",
+    "@chakra-ui/next-js": "^2.3.2",
+    "@chakra-ui/react": "^2.9.3",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fontsource/comfortaa": "^5.1.0",
+    "@fontsource/inter": "^5.1.0",
+    "@fontsource/rubik": "^5.1.0",
     "framer-motion": "^11.9.0",
     "next": "^14.2.14",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
@@ -23,7 +27,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.13",
+    "eslint-config-next": "^14.2.14",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
