--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "^14.2.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-pdf": "^9.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
