--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "react-pdf": "^9.1.1"
   },
   "devDependencies": {
+    "@iconify/react": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "^14.2.14",
     "postcss": "^8",
+    "react-vertical-timeline-component": "^3.6.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
